--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,5 +1,6 @@
-DATABASE_URL=enter-your-production-database-url-here
-DATABASE_URL_DEVELOPMENT=enter-your-development-database-url-here
-DATABASE_URL_TEST=enter-your-test-database-url-here
-DATABASE_URL_PREVIEW=enter-your-preview-database-url-here
+DATABASE_URL="postgres://gsjkkdod:sLlokPJ_y9W1ahevw-brk69jvFOgbneP@babar.db.elephantsql.com/gsjkkdod"
+DATABASE_URL_DEVELOPMENT="postgres://mgtslqxl:CQPFxThJ_5-ANmB4vuJ_C3Y-oM2tZ3GB@babar.db.elephantsql.com/mgtslqxl"
+DATABASE_URL_TEST="postgres://qmtdqfcj:8LQT-EUIm-QSymCZ-lh8OqD8jjGOVUUI@babar.db.elephantsql.com/qmtdqfcj"
+DATABASE_URL_PREVIEW="postgres://qiwzwapn:pSvsq4O2IVPvfTx0YSSW8OATX62SkfH2@babar.db.elephantsql.com/qiwzwapn"
 LOG_LEVEL=info
+SKIP_PREFLIGHT_CHECK=true
